--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@
 jupyter==1.0.0
 torch>=1.8.1
 matplotlib==3.2.2
-tensorflowjs==2.7.0
+tensorflowjs
 tensorboard==2.4.0
 wandb==0.10.24
 moviepy==1.0.3
 hydra-core==1.0.6
-# optuna==2.3.0
+optuna==2.3.0
 numpy>=1.19.5
 omegaconf>=2.0.6
 scikit-image>=0.18.1
@@ -23,5 +23,5 @@ gym-minigrid==1.0.2
 pettingzoo==1.8.1
 pettingzoo[classic]
 gym-super-mario-bros==7.3.2
-gym-retro==0.8.0
-griddly==1.0.0
+gym-retro
+griddly
